# harnesse2e

./: .gitignore  CHANGELOG_Harness_Optimization.md  budget.yaml  pipeline.yaml  review_protocol.yaml  settings.example.json  settings.gradle  start.sh  start_all_copilot.sh
agents/: agents.yaml  identities.yaml
data/: custom_pipeline.yaml  custom_pipeline.yaml.migrated  integration_settings.json  pipeline_state.json  runtime_events.jsonl  runtime_state.json
design/: api_design.md  architecture.md  architecture.md.bak.1776162567  data_model.md  ivi_app_store_api_design.md  ivi_app_store_architecture.md  ivi_app_store_data_model.md  pipeline_template_design.md
docs/: README.md
engine/: context_manager.py  copilot_shim.py  event_bus.py  feishu_notifier.py  integrations.py  memory_extractor.py  memory_store.py  pipeline_runner.py  pipeline_template_manager.py  state_machine.py  state_store.py
feishu-claude-code/: .env  .env.example  README.md  bot_config.py  claude_runner.py  commands.py  feishu_client.py  main.py  pyproject.toml  run_control.py  session_store.py
geomag/: build.gradle
openclaw/: AGENTS.md  IDENTITY.md  README.md  TOOLS.md
requirements/: ivi_app_store_requirements_spec.md  runtime.txt
runs/: latest
software-requirement-orchestrator/: requirements_spec.md
src/: build.gradle  proguard-rules.pro
src/main/jni/: CMakeLists.txt  altitude_engine.cpp  attitude_engine.cpp  calib_manager.cpp  can_encoder.cpp  compass_engine.cpp  offroad_jni.cpp  pressure_filter.cpp
tests/: test_claude_cli_adapter.py  test_context_state_management.py  (+3 more)
(+417 files in other folders)
